Surf Rental bottom spacing fixed

--- a/client/src/style.css
+++ b/client/src/style.css
@@ -149,6 +149,10 @@
   background-color: #C3C3C3;
 }
 
+.rentalsSpacer {
+  margin-bottom: 100px;
+}
+
 /*? ============= About Club Page ============= */
 
 .aboutClubPhoto {
